# rumious

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  eslint.config.mjs  jsdoc.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rumious.code-workspace  tsconfig.json  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: codeql.yml  jsdoc.yml
crates/compiler/: Cargo.toml  build.sh
crates/compiler/src/: compiler.rs  context.rs  deps_extractor.rs  helpers.rs  lib.rs  parts.rs  result.rs  route_generator.rs  sourcemap.rs  transformer.rs  utils.rs  visitor.rs
crates/compiler/src/router/: graph.rs  metadata.rs  mod.rs
docs/: advance_state.md  component.md  directives.md  direvtives.md  installation.md  introduction.md  ref.md  start.md  state_and_reactive.md  tsx_syntax.md
examples/component/: index.jsx  package.json
examples/helloworld/: index.jsx
examples/helloworld/public/: index.html
examples/ref/: index.jsx  package.json
examples/state/: index.jsx
scripts/: build.js
shared/: build.js
test/: testious.js
test/core/: app.test.js  component.test.js  context.test.js  ref.test.js  state.test.js  template.test.js
