[package]
name = "compiler"
version = "0.1.0"
edition = "2024"
description = "Compiler for Rumious framework"
repository = "https://github.com/smtdfc/rumious"
license = "MIT"


[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
sourcemap = "9.3.2"
swc_common = "18.0.1"
swc_core = { version = "57.0.0", features = ["ecma_codegen", "common","common_sourcemap","ecma_visit","ecma_utils"] }
swc_ecma_ast = "20.0.1"
swc_ecma_parser = "34.0.0"
wasm-bindgen = "0.2"
